--- a/package.json
+++ b/package.json
@@ -2,14 +2,32 @@
   "name": "web_project_build_tools",
   "version": "1.0.0",
   "description": "",
-  "main": "js/main.js",
+  "main": "js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rmdir /S/Q build",
+    "dev": "npm run clean && npx webpack",
+    "serve": "npx webpack server --mode=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "howler": "^2.2.3"
+    "howler": "^2.2.3",
+    "luxon": "^2.3.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "serve": "^13.0.2",
+    "webpack": "^5.68.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
